# wildmeshing-python

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSES_bundled  README.md  environment.yml  setup.py
.github/workflows/: continuous.yml
cmake/: WildMeshingDependencies.cmake  WildMeshingDownloadExternal.cmake
examples/: tutorial.ipynb
src/: Utils.cpp  Utils.hpp  binding.cpp  tetrahedralize.cpp  tetrahedralize.hpp  triangulate.cpp  triangulate.hpp  triangulate_data.cpp  triangulate_data.hpp
test/: small_tet_test.py  test.py  tet_test.py  tri_test.py
wildmeshing/: __init__.py  runners.py  triangulate_svg.py
